Fixed landing page extra spaces

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Sacramento', cursive;
+  overflow: hidden;
 }
 
-.landing {
-  position: relative;
-  width: 100%;
+.about {
+  overflow: visible;
 }
 
 .cake {
@@ -21,7 +21,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.5);
   color: white;
   display: flex;
   flex-direction: column;
@@ -45,18 +45,21 @@ body {
 }
 
 .title {
-  font-size: 5em;
+  font-size: 6vw;
   font-weight: bold;
-  position: static;
-  bottom: 1200px;
+  position: sticky;
+  bottom: 20vw;
+  text-align: center;
   color: #483434;
  -webkit-text-stroke: 2px #EED6C4;
 }
 
 .caption {
-  font-size: 3em;
-  margin-top: 0.25em;
+  font-size: 4em;
+  margin-top: 0;
   text-align: center;
+  position: absolute;
+  top: 110px;
 }
 
 h4 {
@@ -96,4 +99,10 @@ span {
 
 input {
   width: 20vw;
+}
+
+.aboutme {
+  font-size: 3em;
+  position: relative;
+  top: 30px;
 }
